--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Todo List</title>
+    <title><i class="fas fa-check-circle"></i>Todo List</title>
     <link rel="stylesheet" type="text/css" href="todos.css">
     <link href="https://fonts.googleapis.com/css?family=Mina" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
